demo/src/index.css
@import 'tailwindcss';

:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#root {
  width: 100%;
}

button {
  @apply font-semibold shadow-md px-4 py-1 rounded-full cursor-pointer;
}
button:hover {
  @apply shadow-lg;
}

select {
  cursor: pointer;
}

body {
  margin: 0;
  display: flex;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h2 {
  font-size: 2.4em;
  line-height: 1.1;
}

h3 {
  font-size: 1.8em;
  line-height: 1.1;
}

h4 {
  font-size: 1.6em;
  line-height: 1.1;
}

h5 {
  font-size: 1.4em;
  line-height: 1.1;
}

h6 {
  font-size: 1.2em;
  line-height: 1.1;
}

@media (prefers-color-scheme: light) {
  :root {
    @apply bg-slate-50 text-slate-900;
  }
  button {
    @apply text-indigo-100 bg-stone-900;
  }
  button:hover {
    @apply text-indigo-300;
  }
  button:active {
    @apply text-indigo-400;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    @apply bg-slate-900 text-slate-100;
  }
  button {
    @apply text-indigo-800 bg-stone-200;
  }
  button:hover {
    @apply text-indigo-600;
  }
  button:active {
    @apply text-indigo-500;
  }
}

